Avoid overflow of alt text if avatar image is not found

--- a/byceps/static/style/common.css
+++ b/byceps/static/style/common.css
@@ -642,6 +642,8 @@ nav.pagination li.current {
 .avatar {
   border-radius: 3px;
   display: inline-block;
+  max-height: 100%;
+  max-width: 100%;
   overflow: hidden;
   vertical-align: middle;
 }
